Centre align the text in the button.   Change the column layout to allow the text to display correctly in the button.

--- a/app/webpack/stylesheets/_shame.scss
+++ b/app/webpack/stylesheets/_shame.scss
@@ -460,8 +460,8 @@ form {
     padding: $gutter-one-third;
     border-bottom: 1px solid $border-colour;
 
-    .align-right {
-      text-align: right;
+    .align-centre {
+      text-align: center;
     }
   }
 
